--- a/templates/sales_analysis.html
+++ b/templates/sales_analysis.html
@@ -21,7 +21,7 @@
         .sidebar {
             margin: 0;
             padding: 0;
-            width: 200px;
+            width: 12vw;
             background-color: lightwhite;
             position: fixed;
             height: 90%;
@@ -88,14 +88,21 @@
             }
 
             .container {
-            width: 100%; /* Adjust the width as needed */
-            max-height: 75vh; /* Use viewport height for a responsive maximum height */
-            overflow-x: auto; /* Add horizontal scroll bar if content overflows horizontally */
-            overflow-y: auto; /* Add vertical scroll bar if content overflows vertically */
-            margin-top: 1%; /* Add margin at the top for spacing */
-            margin-left: 5%; /* Add margin to the left side */
-            box-sizing: border-box; /* Include padding and border in the element's total width and height */
-        }
+                width: calc(100% - 20vw); /* Adjust width relative to viewport */
+                max-width: calc(100% - 270px); /* Ensure max width considering the sidebar */
+                height: 80vh; /* Use viewport height for responsive container height */
+                max-height: 800px; /* Set a maximum height */
+                overflow-y: auto; /* Enable vertical scroll if needed */
+                overflow-x: auto; /* Disable horizontal scroll */
+                margin-top: 0; /* No top margin */
+                margin-left: 13vw; /* Adjust left margin based on viewport width */
+                box-sizing: border-box; /* Include padding and border in width/height */
+                padding: 10px; /* Internal padding for content spacing */
+                background-color: #fff; /* Optional: background color */
+                border: 1px solid #ddd; /* Optional: border */
+                display: flex; /* Flexbox for layout adjustments */
+                flex-direction: column; /* Vertical stacking of children */
+            }
         
             
             /* Adjust other styles as needed */
@@ -783,7 +790,7 @@
                 window.weeklyLeadsChartInstance.destroy();
             }
         
-            const statuses = ['Converted', 'Dropped', 'Follow up', 'No Answer', 'Not Interested', 'In Progress'];
+            const statuses = ['Converted', 'Dropped', 'Follow up', 'No Answer', 'Not Interested', 'In Progress', 'Not Contacted'];
             const colors = [
                 'rgba(255, 99, 132, 0.2)', 'rgba(54, 162, 235, 0.2)',
                 'rgba(75, 192, 192, 0.2)', 'rgba(153, 102, 255, 0.2)',
